# ysvdnn25

./: LAB1;VAR8.cpp  LAB2;VAR8.cpp  README.md  lab.2.1.cpp
LAB5/: CMakeLists.txt  data.txt  main.cpp  mainWindow.cpp  mainWindow.h  npc.cpp  npc.h  npcForm.cpp  npcForm.h
lab 2.2/potion.2.2/: Potion.cpp  Potion.h  main.cpp  potion.2.2.sln  potion.2.2.vcxproj  potion.2.2.vcxproj.filters
lab 2.2/potion.2.2/potion.2.2/x64/Debug/: potion.2.2.exe.recipe  potion.2.2.ilk  vc143.idb
lab 2.2/potion.2.2/potion.2.2/x64/Debug/potion.2.2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  potion.2.2.lastbuildstate
lab 3.2/: Cauldron.cpp  Cauldron.hpp  Potion.cpp  Potion.hpp  lab 3.2.sln  main.cpp
lab4.5.14/: CMakeLists.txt  Ticket.h  TicketWindow.h  Ticketwindow.cpp
lab4.6/: .gitignore  CMakeLists.txt  Ticket.h  main.cpp
lab5qt514/: CMakeLists.txt  mainWindow.cpp  passEntry.h  passForm.cpp  passForm.h
lab5qt6/: .gitignore  CMakeLists.txt  data.txt  mainWindow.cpp  mainWindow.h  passEntry.cpp
